Updated total earnings retrieval

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,7 @@
     />
 
     <title>Ebay Testamind Admin Panel</title>
-    <meta
-      name="description"
-      content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
-    />
+    <meta name="description" content="Admin panel for ebay testamind" />
     <meta
       name="keywords"
       content="react,material,kit,application,dashboard,admin,template"
